<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlightRecorder</string>
    <string name="menu_settings">Settings</string>
    <string name="message">Press Start to begin</string>
    <string name="initialPressure">Pressure: 0</string>
    <string name="initialSpeed">Speed: 0</string>
    <string name="buttonOn">Start</string>
    <string name="buttonOff">Stop</string>
    <string name="buttonCall">Emergency Call</string>
    <string name="pressure_service">Servicio de presion</string>
    <string name="title_activity_results_message">FlightRecorder > Results</string>
    <string name="message_results">Results Chart</string>
    <string name="buttonFb">Share</string>
    <string name="buttonMap">Show Map</string>
    <string name="title_activity_facebook_message">FlightRecorder > Login Fb</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonGraph">Graph</string>
    <string name="title_activity_settings_message">FlightRecorder > Settings</string>
    <string name="pref_user_call">Set emergency call</string>
    <string name="pref_user_call_summary">Set emergency call number</string>
    <string name="pref_user_profile">User Settings</string>
    <string name="title_activity_map_message">FlightRecorder > GoogleMaps</string>
    
    
</resources>