<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131313"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/graph1"
        android:layout_width="fill_parent"
        android:layout_height="250dip"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/buttonGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:text="@string/buttonGraph" />

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGraph"
        android:layout_alignLeft="@+id/graph1"
        android:text="@string/buttonMap"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonMap"
        android:layout_alignBottom="@+id/buttonMap"
        android:layout_alignParentRight="true"
        android:text="@string/buttonFb"
        android:textColor="#ffffff" />

</RelativeLayout>